<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">Welcome to OpenGL ES!</string>
    <string name="app_name">Learning OpenGL ES</string>
    
    <string name="a1">Square</string>
    <string name="a2">Triangle</string>
    <string name="a3">Lines</string>
    <string name="a4">Circle</string>
    <string name="a5">Line Circle</string>
    <string name="a6">Cube</string>
    <string name="a7">Graph</string>
    <string name="a8">Hemisphere</string>
    
    
    <string name="openglactivity_menu_touch">Trigger Touch Mode</string>
</resources>
