<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView
	android:id="@+id/title"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/title"
    android:layout_alignParentTop="true"
    />
 	<Button
     android:id="@+id/a1"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:text="@string/a1"
     android:layout_below="@id/title"
     />
     <Button
     android:id="@+id/a2"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:text="@string/a2"
     android:layout_below="@id/a1"
     />
     <Button
     android:id="@+id/a3"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:text="@string/a3"
     android:layout_below="@id/a2"
     />
     <Button
     android:id="@+id/a4"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
     android:text="@string/a4"
     android:layout_below="@id/a3"
     />
</RelativeLayout>
